Implementing Dark mode & cookies
V2:
-dark mode
- Using cookies to not call the public API multiple times.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="#" id ="title">Where in the world?</a></li>
-            <li><button onclick="" id = "DarkModeButton"><i class="fas fa-moon"></i>Dark Mode</button></li>
+            <li><button onclick="DarkModeButton()" id = "DarkModeButton"><i class="fas fa-moon"></i>Dark Mode</button></li>
         </ul>
     </nav>
     <div class="list_country" id ="country_list"></div>
