Adding Search feature
v4:
- Adding search feature

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
               <a href="#" onclick="Filter('Oceania')">Oceania</a>
             </div>
           </div>
+          <input type = "search" placeholder="Search..." class="searchBar" id="searchBar" onchange="searchCountryList()">
+
     </div>
     
     <div class="list_country" id ="country_list"></div>
